# Embedded_WiFi_Sensing

./: LICENSE  README.md
Datasets/: x_trn.npy  y_trn.npy
Datasets/RAW/FA/s1/: csi_data_1720464506.txt  csi_data_1720464592.txt  csi_data_1720464660.txt  csi_data_1720464727.txt  csi_data_1720464793.txt  csi_data_1720465073.txt  csi_data_1720465134.txt  csi_data_1720465204.txt  csi_data_1720465300.txt  csi_data_1720465390.txt  csi_data_1720465456.txt  csi_data_1720465577.txt  csi_data_1720465658.txt  csi_data_1720465733.txt
Datasets/RAW/FA/s10/: csi_data_1721932235.txt  csi_data_1721932310.txt  csi_data_1721932380.txt  csi_data_1721932430.txt  csi_data_1721932477.txt  csi_data_1721932528.txt  csi_data_1721932596.txt  csi_data_1721932944.txt  csi_data_1721932999.txt  (+6 more)
ESP32_CSI_Web_Collecting_Tool/: CMakeLists.txt
ESP32_CSI_Web_Collecting_Tool/main/: CMakeLists.txt  main.c
ESP32_CSI_Web_Collecting_Tool/main/common/: utils.h
ESP32_CSI_Web_Collecting_Tool/main/components/: nvs_storage.c  nvs_storage.h  reset_button.c  reset_button.h  sd_component.c  sd_component.h  uart_component.c  uart_component.h  udp_client.c  udp_client.h
ESP32_CSI_Web_Collecting_Tool/main/tasks/: csi_app.c  csi_app.h  http_server.c  http_server.h  informer.c  informer.h  wifi_app.c  wifi_app.h
ESP32_CSI_Web_Collecting_Tool/main/webpage/: app.js  index.html
Embedded_Model/: model_complete_EMD_LSTM_uint8.tflite  small_model_complete_EMD_LSTM.keras  small_model_complete_EMD_LSTM_uint8.tflite
Scripts/: CSI.py  dataset_constructor.py  imf_generator.py  imf_sample_builder.py
(+1684 files in other folders)
